[package]

name = "hyper-sync"
version = "0.10.14" # remember to update html_root_url
description = "A modern HTTP library (synchronous)."
readme = "README.md"
homepage = "https://github.com/khvzak/hyper-sync"
documentation = "https://docs.rs/hyper-sync"
repository = "https://github.com/khvzak/hyper-sync"
license = "MIT"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Aleksandr Orlenko <zxteam@gmail.com>"]
keywords = ["http", "hyper"]
categories = ["web-programming::http-client", "web-programming::http-server"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
base64 = "0.9.0"
bytes = "0.4.4"
httparse = "1.0"
language-tags = "0.2"
log = "0.4"
mime = "0.3.2"
num_cpus = "1.0"
percent-encoding = "1.0"
time = "0.1"
unicase = "2.1"
url = "1.0"

[dev-dependencies]
env_logger = "0.5"

[features]
nightly = []
